--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -45,3 +45,7 @@ title = "Grafy i sieci",
 publisher = "Wydawnictwo Naukowe PWN", 
 year = 2013, 
 address = "Warszawa", } 
+
+@misc{nvgraph,
+	title={Oficjalna dokumentacja bilioteki {nvGRAPH}},
+	note={\url{https://docs.nvidia.com/cuda/nvgraph}}}
